--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+nav {
+  height: 50px;
+  width: 100%;
+  background-color: grey;
+  position: fixed;
+  z-index: 50;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+main {
+  padding: 50px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+p {
+  margin: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.burger-btn {
+width: 20px;
+height: 30px;
+margin-left: 20px;
+position: relative;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.burger-btn:before {
+content: '';
+position: absolute;
+top: 0;
+background-color: black;
+height: 2px;
+}
+
+.burger-btn:after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  background-color: black;
+  height: 2px;
 }
